# me234b-lab2-src

./: .gitignore
core_msgs-dev/: .gitignore  .gitlab-ci.yml  README.md
core_msgs-dev/control_msgs/: CMakeLists.txt  package.xml
core_msgs-dev/control_msgs/msg/: InCommand.msg
core_msgs-dev/gvrbot/: CMakeLists.txt  package.xml
core_msgs-dev/imu_msgs/: CMakeLists.txt  package.xml
core_msgs-dev/imu_msgs/msg/: imu_sync_info.msg
core_msgs-dev/iop_bridge/: CMakeLists.txt  package.xml
core_msgs-dev/iop_bridge/msg/: jaus_battery_status.msg  jaus_diesel_engine_config.msg  jaus_diesel_engine_status.msg  jaus_fuel_cell_status.msg  jaus_gas_engine_config.msg  jaus_gas_engine_status.msg  jaus_hydraulic_status.msg  jaus_stream_config.msg  jaus_visual_sensor_config.msg
core_msgs-dev/mqtt_msgs/: CMakeLists.txt  package.xml
core_msgs-dev/mqtt_msgs/msg/: LincControlState.msg  LincRisk.msg  LincState.msg  LincSystemState.msg  MqttServerState.msg
frontier_exploration/: CMakeLists.txt  package.xml
frontier_exploration/launch/: custom_map.launch  frontier_exploration.launch  mapping.launch  mapping_rtabmap.launch  move_base.xml  navigation.launch  navigation_sim.launch  stage.launch
frontier_exploration/move_base_config/: costmap_common_params.yaml  costmap_standalone.yaml  global_costmap_params.yaml  global_planner.yaml  local_costmap_params.yaml
frontier_exploration/scripts/: MPC.py  getUProportional.py  movebasedemo.py  mpc_local_planner.py  p_local_planner.py  plan.txt  prelab3b2_map.py  prelab3b2_nav.py  prelab3b2_plan.py  prelab3b_sim.ipynb  prelab3c_dev.ipynb  prelab3c_dev.py  sim_map_pub.py
frontier_exploration/stage_config/maps/: SDH7_floorplan.pgm  map.pgm  map.yaml
frontier_exploration/stage_config/worlds/: SDH7.world  map.world
mpc_local_planner/mpc_local_planner_examples/cfg/diff_drive/: costmap_common_params.yaml
robot_pose_ekf/src/: odom_estimation_node.cpp
state_estimator/: CMakeLists.txt  package.xml
state_estimator/config/: lab2.rviz
state_estimator/launch/: ekf.launch  visualize.launch
state_estimator/scripts/: Step2ProjectMatlab.m  playbags.sh  state_estimator.py
